--- a/mobile/src/modules/html/forum/forum.html
+++ b/mobile/src/modules/html/forum/forum.html
@@ -30,12 +30,12 @@
   <a href="#"><span class="iconfont icon-iconlaod bg5"></span><p>经济金融</p></a>
   <a href="#"><span class="iconfont icon-chaiqian bg6"></span><p>劳动人事</p></a>
   <a href="#"><span class="iconfont icon-zixun bg7"></span><p>拆迁安置</p></a>
-  <a href="#"><span class="iconfont icon-gengduo1 bg8"></span><p>查看更多</p></a>
+  <a href="question.html"><span class="iconfont icon-gengduo1 bg8"></span><p>查看更多</p></a>
 </div>
 
 <div class="hot">
   <span>热门问题</span>
-  <a href="question.html">更多</a>
+  <a href="">更多</a>
 </div>
 
 <div class="story">
