--- a/mobile/src/modules/html/index/index.html
+++ b/mobile/src/modules/html/index/index.html
@@ -50,7 +50,7 @@
 		</li>
 		<li>
 			<div class="border1px">
-				<a href="forum.html" class="clearfix border1px">
+				<a href="sort.html" class="clearfix border1px">
 					<div class="icon4 iconfont icon-zhineng pull-left"></div>
 					<div class="all-spa">
 						<p class="spa1">智能机器咨询</p>
