--- a/mobile/src/modules/html/point/point.html
+++ b/mobile/src/modules/html/point/point.html
@@ -20,95 +20,97 @@
 	</div>
 </div>
 
-<div class="side-card clearfix">
-	<div class="side pull-left">
-		<ul>
-			<li>全部</li>
-			<li>业务咨询</li>
-			<li>刑事</li>
-			<li>婚姻家庭</li>
-			<li>劳动人事</li>
-			<li>侵权纠纷</li>
-			<li>合同纠纷</li>
-			<li>交通事故</li>
-			<li>消费维权</li>
-			<li>邻里纠纷</li>
-			<li>拆迁安置</li>
-			<li>房屋纠纷</li>
-		</ul>
-	</div>
-	<div class="all-card pull-right">
-		<div class="cont">
+<div class="point-xsq">
+	<div class="side-card clearfix">
+		<div class="side pull-left">
 			<ul>
-				<li>综合排序</li>
-				<li>所属地区</li>
-				<li>更多选择</li>
+				<li>全部</li>
+				<li>业务咨询</li>
+				<li>刑事</li>
+				<li>婚姻家庭</li>
+				<li>劳动人事</li>
+				<li>侵权纠纷</li>
+				<li>合同纠纷</li>
+				<li>交通事故</li>
+				<li>消费维权</li>
+				<li>邻里纠纷</li>
+				<li>拆迁安置</li>
+				<li>房屋纠纷</li>
 			</ul>
-			<div class="person">
-				<div class="head-mess clearfix">
-					<div class="head pull-left">
-						<img src="images/lala.jpg" alt="" />
+		</div>
+		<div class="all-card pull-right">
+			<div class="cont">
+				<ul>
+					<li>综合排序</li>
+					<li>所属地区</li>
+					<li>更多选择</li>
+				</ul>
+				<div class="person">
+					<div class="head-mess clearfix">
+						<div class="head pull-left">
+							<img src="images/lala.jpg" alt="" />
+						</div>
+						<div class="mess pull-left">
+							<b>小新</b><br/>
+							<span>执业律师</span><br/>
+							<span>平均应答时间:1分05秒</span>
+						</div>
 					</div>
-					<div class="mess pull-left">
-						<b>小新</b><br/>
-						<span>执业律师</span><br/>
-						<span>平均应答时间:1分05秒</span>
-					</div>
-				</div>
-				<p class="year">执业年限：6年</p>
-				<div class="long clearfix">
-					<span>专长：</span>
-					<span class="oran">婚姻家庭</span>
-					<span class="oran">侵权纠纷</span>
-				</div>
-			</div>
-			<div class="help clearfix">
-				<span class="pull-left">已帮助1000人</span>
-				<p class="pull-right"><a href="xiaoxin.html">向TA咨询</a></p>
-			</div>
-			<div class="person">
-				<div class="head-mess clearfix">
-					<div class="head pull-left">
-						<img src="images/lala2.jpg" alt="" />
-					</div>
-					<div class="mess pull-left">
-						<b>小丸子</b><br/>
-						<span>执业律师</span><br/>
-						<span>平均应答时间:1分05秒</span>
+					<p class="year">执业年限：6年</p>
+					<div class="long clearfix">
+						<span>专长：</span>
+						<span class="oran">婚姻家庭</span>
+						<span class="oran">侵权纠纷</span>
 					</div>
 				</div>
-				<p class="year">执业年限：6年</p>
-				<div class="long clearfix">
-					<span>专长：</span>
-					<span class="oran">婚姻家庭</span>
-					<span class="oran">侵权纠纷</span>
+				<div class="help clearfix">
+					<span class="pull-left">已帮助1000人</span>
+					<p class="pull-right"><a href="xiaoxin.html">向TA咨询</a></p>
 				</div>
-			</div>
-			<div class="help clearfix">
-				<span class="pull-left">已帮助1000人</span>
-				<p class="pull-right"><a href="">向TA咨询</a></p>
-			</div>
-			<div class="person">
-				<div class="head-mess clearfix">
-					<div class="head pull-left">
-						<img src="images/lala1.jpg" alt="" />
+				<div class="person">
+					<div class="head-mess clearfix">
+						<div class="head pull-left">
+							<img src="images/lala2.jpg" alt="" />
+						</div>
+						<div class="mess pull-left">
+							<b>小丸子</b><br/>
+							<span>执业律师</span><br/>
+							<span>平均应答时间:1分05秒</span>
+						</div>
 					</div>
-					<div class="mess pull-left">
-						<b>光头</b><br/>
-						<span>执业律师</span><br/>
-						<span>平均应答时间:1分05秒</span>
+					<p class="year">执业年限：6年</p>
+					<div class="long clearfix">
+						<span>专长：</span>
+						<span class="oran">婚姻家庭</span>
+						<span class="oran">侵权纠纷</span>
 					</div>
 				</div>
-				<p class="year">执业年限：6年</p>
-				<div class="long clearfix">
-					<span>专长：</span>
-					<span class="oran">婚姻家庭</span>
-					<span class="oran">侵权纠纷</span>
+				<div class="help clearfix">
+					<span class="pull-left">已帮助1000人</span>
+					<p class="pull-right"><a href="">向TA咨询</a></p>
 				</div>
-			</div>
-			<div class="help clearfix">
-				<span class="pull-left">已帮助1000人</span>
-				<p class="pull-right"><a href="">向TA咨询</a></p>
+				<div class="person">
+					<div class="head-mess clearfix">
+						<div class="head pull-left">
+							<img src="images/lala1.jpg" alt="" />
+						</div>
+						<div class="mess pull-left">
+							<b>光头</b><br/>
+							<span>执业律师</span><br/>
+							<span>平均应答时间:1分05秒</span>
+						</div>
+					</div>
+					<p class="year">执业年限：6年</p>
+					<div class="long clearfix">
+						<span>专长：</span>
+						<span class="oran">婚姻家庭</span>
+						<span class="oran">侵权纠纷</span>
+					</div>
+				</div>
+				<div class="help clearfix">
+					<span class="pull-left">已帮助1000人</span>
+					<p class="pull-right"><a href="">向TA咨询</a></p>
+				</div>
 			</div>
 		</div>
 	</div>
