--- a/mobile/src/modules/html/submits/submits.html
+++ b/mobile/src/modules/html/submits/submits.html
@@ -9,46 +9,48 @@
   </div>
 </div>
 
-<div class="question">
-	<div class="questions">
-		<div class="num-img">
-			<span class="imgs">
-				<i class="iconfont icon-ren"></i>
+<div class="submit-xsq">
+	<div class="question">
+		<div class="questions">
+			<div class="num-img">
+				<span class="imgs">
+					<i class="iconfont icon-ren"></i>
+				</span>
+				<span class="num">182****5767</span>
+			</div>
+
+			<div class="ask">
+				男朋友因为砸车，盗窃，烟酒，打架，闹事今天判刑1年零3个月现
+		    在在看守所已经7个月了。想问下女朋友能去探
+		    监吗？
+		    <p>男朋友因为砸车，盗窃，烟酒，打架，闹事今天判刑1年零3个月现
+		    在在看守所已经7个月了。想问下女朋友能去...</p>
+			</div>
+			<span class="text">刑事</span>
+			<span class="text">探监</span>
+		</div>
+		<div class="second clearfix">
+			<span class="pull-left spa1"><i class="iconfont icon-14000"></i>1</span>
+			<span class="pull-left spa2"><i class="iconfont icon-dianzan"></i>6</span>
+			<span class="pull-right">提交与:5秒前</span>
+		</div>
+	</div>
+
+	<div class="answer">
+		<div class="num-img clearfix">
+			<span class="imgs pull-left">
+				<img src="images/lala2.jpg" alt="" />
 			</span>
-			<span class="num">182****5767</span>
+			<span class="name pull-left">小丸子</span>
+			<span class="heart pull-right"><i class="iconfont icon-aixin"></i>采纳</span>
 		</div>
-
-		<div class="ask">
-			男朋友因为砸车，盗窃，烟酒，打架，闹事今天判刑1年零3个月现
-	    在在看守所已经7个月了。想问下女朋友能去探
-	    监吗？
-	    <p>男朋友因为砸车，盗窃，烟酒，打架，闹事今天判刑1年零3个月现
-	    在在看守所已经7个月了。想问下女朋友能去...</p>
+		<p>男朋友因为砸车，盗窃，烟酒，打架，闹事今天判刑1年零3个月现在在看守所已经7个月了。男朋 	友因为砸车，盗窃，烟酒，打架，闹事今天判刑1年零3个月现在在看守所已经7个月了。能去探监吗...
+		<a href="answer.html">查看全部</a>
+		</p>
+		<div class="second clearfix">
+			<span class="pull-left spa1"><i class="iconfont icon-14000"></i>1</span>
+			<span class="pull-left spa2"><i class="iconfont icon-dianzan"></i>6</span>
+			<span class="pull-right">提交与:5秒前</span>
 		</div>
-		<span class="text">刑事</span>
-		<span class="text">探监</span>
-	</div>
-	<div class="second clearfix">
-		<span class="pull-left spa1"><i class="iconfont icon-14000"></i>1</span>
-		<span class="pull-left spa2"><i class="iconfont icon-dianzan"></i>6</span>
-		<span class="pull-right">提交与:5秒前</span>
-	</div>
-</div>
-
-<div class="answer">
-	<div class="num-img clearfix">
-		<span class="imgs pull-left">
-			<img src="images/lala2.jpg" alt="" />
-		</span>
-		<span class="name pull-left">小丸子</span>
-		<span class="heart pull-right"><i class="iconfont icon-aixin"></i>采纳</span>
-	</div>
-	<p>男朋友因为砸车，盗窃，烟酒，打架，闹事今天判刑1年零3个月现在在看守所已经7个月了。男朋 	友因为砸车，盗窃，烟酒，打架，闹事今天判刑1年零3个月现在在看守所已经7个月了。能去探监吗...
-	<a href="answer.html">查看全部</a>
-	</p>
-	<div class="second clearfix">
-		<span class="pull-left spa1"><i class="iconfont icon-14000"></i>1</span>
-		<span class="pull-left spa2"><i class="iconfont icon-dianzan"></i>6</span>
-		<span class="pull-right">提交与:5秒前</span>
 	</div>
 </div>
