--- a/mobile/src/modules/html/xiaoxin/xiaoxin.html
+++ b/mobile/src/modules/html/xiaoxin/xiaoxin.html
@@ -8,48 +8,50 @@
 	</div>
 </div>
 
-<div class="message clearfix">
-	<div class="head pull-left">
-		<img src="images/lala.jpg" alt="" />
-	</div>
-	<div class="mess pull-left">
-		<b>小新</b><br/>
-		<span>执业律师</span>
-		<span class="five">5年</span><br/>
-		<div class="long clearfix">
-			<span>专长：</span>
-			<span class="oran">婚姻家庭</span>
-			<span class="oran">侵权纠纷</span>
+<div class="xiaomi-xsq">
+	<div class="message clearfix">
+		<div class="head pull-left">
+			<img src="images/lala.jpg" alt="" />
 		</div>
-		<p>执业证号：4008208820</p>
-		<p>所属地区：江苏南京</p>
+		<div class="mess pull-left">
+			<b>小新</b><br/>
+			<span>执业律师</span>
+			<span class="five">5年</span><br/>
+			<div class="long clearfix">
+				<span>专长：</span>
+				<span class="oran">婚姻家庭</span>
+				<span class="oran">侵权纠纷</span>
+			</div>
+			<p>执业证号：4008208820</p>
+			<p>所属地区：江苏南京</p>
+		</div>
 	</div>
-</div>
 
-<div class="introduce">
-	<div class="good clearfix">
-		<ul>
-			<li>
-				咨询人数<br/>
-				<span>1000</span>
-			</li>
-			<li>好评人数<br/>
-				<span>999</span>
-			</li>
-			<li>满意度<br/>
-				<span>100%</span>
-			</li>
-		</ul>
+	<div class="introduce">
+		<div class="good clearfix">
+			<ul>
+				<li>
+					咨询人数<br/>
+					<span>1000</span>
+				</li>
+				<li>好评人数<br/>
+					<span>999</span>
+				</li>
+				<li>满意度<br/>
+					<span>100%</span>
+				</li>
+			</ul>
+		</div>
+		<div class="expertise">
+			<span>专长领域</span>
+			<p>擅长各类民事、商事、房地产与建设工程，处理公司经营期间的对内外债务，婚姻家庭纠纷、刑事案件等法律事务。</p>
+		</div>
+		<div class="expertise">
+			<span>律师简介</span>
+			<p>赵光利律师在高等院校长期从事法律教学和法律研究工作，法学理论知识扎实，对法律法规理解透彻，并致力于我国民商事、教育法律法规的研究。</p>
+			<a href="">更多详情&gt;</a>
+		</div>
+		<a href="end.html" class="start">开始咨询</a>
 	</div>
-	<div class="expertise">
-		<span>专长领域</span>
-		<p>擅长各类民事、商事、房地产与建设工程，处理公司经营期间的对内外债务，婚姻家庭纠纷、刑事案件等法律事务。</p>
-	</div>
-	<div class="expertise">
-		<span>律师简介</span>
-		<p>赵光利律师在高等院校长期从事法律教学和法律研究工作，法学理论知识扎实，对法律法规理解透彻，并致力于我国民商事、教育法律法规的研究。</p>
-		<a href="">更多详情&gt;</a>
-	</div>
-	<a href="end.html" class="start">开始咨询</a>
 </div>
 
